# backend

./: .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.6/server/: __init__.data.json  __init__.meta.json  celery_app.data.json  celery_app.meta.json  gql.data.json  gql.meta.json  urls.data.json  urls.meta.json  wsgi.data.json  wsgi.meta.json
deploy/: Dockerfile
deploy/helm/: .overrides.yaml  Chart.yaml  values.yaml
deploy/helm/templates/: _env.yaml  config_maps.yaml  secrets.yaml
deploy/nginx/: nginx.conf
deploy/server/: uwsgi.ini
develop/: docker-compose.base.yml  docker-compose.docker.yml  docker.sh  local.sh  stop.sh
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
scripts/: lint.sh  quality.sh
server/: celery_app.py  gql.py  urls.py
server/apps/billing/: __init__.py  apps.py
server/apps/core/: apps.py  exceptions.py
server/apps/media/: __init__.py  apps.py
server/apps/projects/: __init__.py  apps.py  draft_wrapper.py  type_annotation_testing.py
server/apps/users/: apps.py
server/settings/: __init__.py
server/settings/components/: admin.py  apps.py  auth.py  constance.py  drf.py  github.py  gitlab.py  graphene.py  i18n.py  logs.py  middleware.py  minio.py  sp.py  templates.py
server/settings/environments/: build.py  dev.py  development.py  development.py.example  prod.py  production.py  test.py
tests/: base.py  conftest.py  ghl_request_factory.py  request_factory.py  schema.graphql
tests/factory/: fields.py
tests/fixtures/: billing.py  couchdb.py  figma.py  ghl.py  ghl_mock.py  github.py  gitlab.py  google.py  http.py  requests.py  settings.py  users.py
tests/helpers/: asset_provider.py  bit_field.py  couchdb.py  figma.py  ghl_client.py  gitlab_client.py  httppretty_client.py  httpretty_client.py  request_factory.py
tests/test_billing/: conftest.py
tests/test_billing/factories/: __init__.py  change_subscription_request.py  subscription.py  tariff.py
tests/test_billing/test_api/: conftest.py  test_tariff.py
tests/test_constances/: test_default_tariff.py
tests/test_core/factories/: email_message.py
tests/test_core/test_middleware/: test_last_activity.py
tests/test_core/test_services/: test_couchdb.py  test_cropper.py  test_dispatcher.py  test_email.py  test_figma_client.py
tests/test_core/test_tasks/: test_send_emails.py
tests/test_media/factories/: file.py  image.py
tests/test_projects/: conftest.py  factories.py  test_api_project.py  test_api_projects.py
tests/test_projects/factories/: __init__.py  figma_integration.py  github_integration.py  gitlab_integration.py  (+3 more)
tests/test_users/: factories.py  test_api_me_user.py  test_api_users.py  test_authentication.py  test_gql_login.py  test_gql_me_user.py  test_gql_users.py  test_login_user.py  test_token_auth.py
(+955 files in other folders)
