[tool.poetry]
name = "spec_projector"
version = "0.1.0"
description = ""
authors = ["Junte Ltd"]

[tool.poetry.dependencies]
python = "^3.6"
python-decouple = "^3.1"
psycopg2-binary = "*"
django = "2.*"
django-admin-autocomplete-filter = "*"
django-health-check = "*"
django-cors-headers = "*"
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
djangorestframework = "*"
drf-yasg = "*"
jnt-django-bitfield = "*"
jnt-django-admin-tools = "*"
social-auth-app-django = "^3.1"
social-auth-core = "^3.2"
graphene-django = "^2.6"
uWSGI = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "^0.4.0"
dennis = "^0.9.0"
xenon = "^0.5"
safety = "^1.8"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
flake8 = "*"
flake8-pytest = "^1.3"
flake8-django = "^0.0.4"
flake8-pytest-style = "^0.1.3"
wemake-python-styleguide = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
