[tool.poetry]
name = "spec_projector"
version = "0.1.0"
description = ""
authors = ["Junte Ltd"]

[tool.poetry.dependencies]
python = "^3.7"
python-decouple = "*"
psycopg2-binary = "*"
django = "2.*"
django-admin-autocomplete-filter = "*"
django-health-check = "*"
django-cors-headers = "*"
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
djangorestframework = "*"
drf-yasg = "*"
jnt-django-bitfield = "*"
jnt-django-admin-tools = "*"
social-auth-app-django = "^3.*"
social-auth-core = "^3.*"
graphene-django = "^2.*"
uWSGI = "*"
python-gitlab = "^1.14"
httpretty = "^0.9.7"

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "*"
dennis = "*"
xenon = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
flake8 = "*"
flake8-pytest = "*"
flake8-django = "*"
flake8-pytest-style = "*"
wemake-python-styleguide = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
