[tool.poetry]
name = "spec_projector"
version = "0.1.0"
description = ""
authors = ["Junte Ltd"]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "*"
psycopg2-binary = "*"
django = "3.*"
django-admin-autocomplete-filter = "*"
django-health-check = "*"
django-cors-headers = "*"
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
djangorestframework = "3.11.*"
drf-yasg = "*"
jnt-django-admin-tools = "*"
jnt-django-toolbox = "^0.1.0"
social-auth-app-django = "^3.*"
social-auth-core = "^3.*"
graphene-django = "*"
uWSGI = "*"
python-gitlab = "*"
PyGithub = "*"
sentry-sdk = "^0.14.3"
jnt-django-graphene-toolbox = "*"
injector = "^0.18.4"
cloudant = "*"
django-constance = {extras = ["database"], version = "*"}
python-memcached = "*"
django-minio-storage = "^0.3.10"
redis = "*"
flower = "*"
celery = "4.*"
pillow = "*"
graphene-file-upload = "*"
cloudpayments = "^1.6.3"
fluent-logger = "^0.10.0"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "*"
dennis = "*"
xenon = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
httpretty = "*"
factory-boy = "*"
flake8 = "*"
flake8-pytest = "*"
flake8-django = "*"
flake8-pytest-style = "*"
wemake-python-styleguide = "*"
black = "^20.8b1"
flake8-class-attributes-order = "^0.1.1"
isort = "4.3.21" # isort 5 is broken for now

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | .*\/migrations
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
